<resources>
    <string name="app_name">Caro Bluetooth</string>
    <string name="single_player">single player</string>
    <string name="multiplayer">multiplayer via Bluetooth</string>
    <string name="about">About</string>
    <string name="exit">exit</string>
    <string name="close">close</string>
    <string name="about_game">Caro Bluetooth version 1.0</string>
    <string name="message_exit_game">Do you sure you want to exit?</string>
    <string name="sample_device_name">Sony Xperia X Performance</string>
    <string name="sample_device_address">A1:B2:C3:D4:E5:F6</string>
    <string name="select_device_to_connect">Select a device to connect</string>
    <string name="paired_devices">Paired Devices:</string>
    <string name="no_paired_devices">There is no paired devices</string>
    <string name="scan_available_devices">Scan devices</string>
    <string name="no_available_devices">There is no available devices</string>
    <string name="available_device">Available Devices:</string>
    <string name="your_device_name">Your Device Name:</string>
    <string name="your_device_address">Your Device Address:</string>
    <string name="bluetooth_not_supported">Device does not supports bluetooth</string>
    <string name="request_turn_on_bluetooth_to_play">Bluetooth has been turned off, turn on bluetooth to
    play game</string>
    <string name="turn_on_bluetooth_to_play">"You need to turn on bluetooth to play game</string>
    <string name="bluetooth_turned_on">Bluetooth turned on</string>
    <string name="request_permission_to_scan">You need to grant location permission to scan
        available devices</string>
    <string name="request_turn_on_bluetooth_to_scan">Bluetooth has been turned off, turn on
        bluetooth to scan available devices</string>
    <string name="scanning">Scanning, please wait</string>
    <string name="show_visibility">Show visibility</string>
    <string name="text_player">Player: </string>
    <string name="win_lose">W/L: </string>
    <string name="btn_play">PLAY</string>
    <string name="unable_to_connect_device">Unable to connect device</string>
    <string name="device_connection_was_lost">Device connection was lost</string>
    <string name="something_error">Something error</string>
    <string name="not_connected">Not connected</string>
    <string name="connect_to_device">Connect to %s</string>
    <string name="message_exit_game_play">You are now playing the game. If you exit you will lose
        this game and start new game. Do you want to continue?</string>
    <string name="message_undo_game_play">Do you want to undo game?</string>
    <string name="message_back_game_play">You are now playing the game. If you exit you will lose
        this game and back to home. Do you want to continue?</string>
    <string name="low_battery_message">Battery is low, please connect charger!</string>
    <string name="low_battery_title">Low Battery!</string>
    <string name="permission_to_share_image">This permission is required to share image</string>
    <string name="no_app_can_share_image">Your device has no app to share image</string>
    <string name="message_win_game_play">You win !</string>
    <string name="message_lose_game_play">You lose!</string>
    <string name="not_connected_any_device">You are not connected to any device, find and connect
        other device to play</string>
    <string name="press_play_button">Connected, press Play button to start game</string>
    <string name="opponent_turn">Opponent turn</string>
    <string name="your_turn">Your turn</string>
    <string name="win_lose_format">W/L: %1$d/%2$d</string>
    <string name="request_play_new_game">Do you want to play a new game?</string>
    <string name="opponent_end_game">Your opponent choose end game</string>
    <string name="opponent_surrender">Your opponent surrender, You win!</string>
    <string name="start_new_game">Start new game</string>
    <string name="computer_easy">Easy: </string>
    <string name="turn_on_bluetooth_to_reconnect">You are connecting to other device, turn
        on bluetooth to reconnect</string>
    <string name="lost_connection">Lost connection</string>
    <string name="message_lost_connection">Bluetooth connection was lost, click retry to
        reconnect or close to back home</string>
    <string name="retry">Retry</string>
    <string name="got_it">GOT IT</string>
    <string name="tutorial_button_exit">This is button EXIT, click here to back home screen</string>
    <string name="tutorial_button_share">This is button SHARE, click here to share your play
        screen to friend</string>
    <string name="tutorial_button_search">This is button SEARCH DEVICE, click here to search and
        connect to other device via bluetooth</string>
    <string name="tutorial_button_visibility">This is button SHOW VISIBILITY, click here to make
        your device visibly so other device can find you</string>
    <string name="tutorial_player_info">This is PLAYER INFORMATION, includes player color and
        number win, lose </string>
    <string name="tutorial_button_play">This is button PLAY, when you have connected to other device,
        click here to start game</string>
    <string name="tutorial_device_info">This is YOUR DEVICE INFORMATION, you should use this
        information to connect to exact device you want</string>
    <string name="tutorial_button_scan_devices">This is button SCAN DEVICES, click here to search
        all available devices near you</string>
    <string name="you">You</string>
    <string name="opponent">Opponent</string>
    <string name="back_home">Back home</string>
    <string name="share_image">Share image</string>
    <string name="search_device">Search other device</string>
    <string name="text_button_settings">Settings</string>
    <string name="text_settings">SETTINGS</string>
    <string name="two_head_win_block">Two head win block</string>
    <string name="sound">Sound</string>
    <string name="game_easy">Easy</string>
    <string name="game_medium">Medium</string>
    <string name="game_hard">Hard</string>
    <string name="level_game">Level game :</string>
    <string name="text_orientation_portrait">Portrait</string>
    <string name="text_orientation_landscape">Landscape</string>
    <string name="text_choose_orientation">Choose orientation board :</string>
    <string name="text_history">HISTORY</string>
    <string name="text_history_index">Id</string>
    <string name="history">History</string>
    <string name="text_history_human_status">Human</string>
    <string name="text_history_computer_status">Computer</string>
    <string name="text_history_level_game">Level</string>
    <string name="text_history_time_game">Time game</string>
    <string name="time_game_hour_default">%1$02d h %2$02d m</string>
    <string name="time_game_not_hour_default">%1$02d m %2$02d s</string>
    <string name="time_game_not_hour_not_minute_default">%1$2d s</string>
    <string name="computer_thinking">Computer is thinking!</string>
</resources>
